# litemd

./: .gitignore  DEVELOPMENT.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  files.rs  git.rs  lib.rs  main.rs  models.rs  paths.rs
src-tauri/updater/: litemd.key.pub
src/components/: DiffView.tsx  EditorWorkspace.tsx  EmptyState.tsx  MarkdownPreview.tsx  RenderedHtmlView.tsx  TabStrip.tsx
src/hooks/: useAppUpdate.ts  useCliInstaller.ts  useEditorFileCommands.ts  useEditorTabs.ts  useGlobalShortcuts.ts  usePreviewScrollSync.ts  useScrollSyncLock.ts  useTabFileSync.ts  useTabLifecycleEffects.ts
src/lib/: diff.test.ts  diff.ts  editorTabIO.ts  fileSignature.test.ts  fileSignature.ts  markdown.test.ts  markdown.ts  mermaidHydration.ts  mermaidZoom.test.ts  mermaidZoom.ts  previewHydration.ts  renderedDiff.test.ts  renderedDiff.ts  scrollSync.test.ts  scrollSync.ts  session.test.ts  session.ts  shortcuts.test.ts  shortcuts.ts  tabNavigation.test.ts  tabNavigation.ts  tabState.test.ts  tabState.ts  tabs.ts  tauriCommands.ts  workspaceView.test.ts  workspaceView.ts
